--- a/css/style.css
+++ b/css/style.css
@@ -58,21 +58,23 @@ background-image: linear-gradient(rgba(0,0,0,0.5), transparent), linear-gradient
 }
 
 #blog div {
+   
     background-color: white;
     padding: -5%;
     border-radius: 10px;
     width: 20%;
-    height: auto;
+    height: 100%;
     display: inline-block;
-    margin: 1%;
+    margin: 0.5%;
     justify-content: center;
-   
+    
 }
 
 #blog div img {
    width: 100%;
-   height: auto;
-   margin-top: -30px;   
+   height: 100%;
+   margin-top: -40px;  
+
 }
 
 #blog div h3 {
@@ -106,11 +108,11 @@ background-image: linear-gradient(rgba(0,0,0,0.5), transparent), linear-gradient
     background-color: black;
     border-style: solid;
     border-width: 1px;
-    border-top: 5px solid;
+    border-top: 1px solid;
 }
 
 #blog div:nth-child(4) img{
-    border-top: 4px solid black;
+    border-top: 1px solid black;
 }
 
 #blog div:nth-of-type(3) h3{
