--- a/css/style.css
+++ b/css/style.css
@@ -59,9 +59,9 @@ background-image: linear-gradient(rgba(0,0,0,0.5), transparent), linear-gradient
 
 #blog div {
    
-    background-color: white;
+    background-color: whitesmoke;
     padding: -5%;
-    border-radius: 10px;
+    border-radius: 15px;
     width: 20%;
     height: 100%;
     display: inline-block;
@@ -104,6 +104,8 @@ background-image: linear-gradient(rgba(0,0,0,0.5), transparent), linear-gradient
     padding-left: 6%;
 }
 
+
+
 #blog div:nth-child(4) {
     background-color: black;
     border-style: solid;
@@ -125,4 +127,39 @@ background-image: linear-gradient(rgba(0,0,0,0.5), transparent), linear-gradient
 
 #blog div:nth-of-type(3) a{
     color: white;
+}
+
+#services {
+    margin-top: 25px;
+    text-align: center;
+    padding: 10px;
+    top: 25px;
+    background-color: whitesmoke;
+}
+
+#services h2 {
+    margin-top: 5%;
+    font-size: 35px;
+}
+
+#services li {
+    font-size: 20px;
+    background-color: white;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    padding-left: 15px;
+    padding-right: 15px;
+    width: 10%;
+    height: auto;
+    display: inline-block;
+    margin: 1%;
+    justify-content: center;
+}
+
+#services li:first-child {
+    background-color:  rgba(255, 83,21);
+}
+
+#services li:hover {
+    box-shadow: 0px 0px 3px rgba(0,0,0,0.5);
 }
